--- a/public/webfile.ejs
+++ b/public/webfile.ejs
@@ -4,7 +4,7 @@
 <h1>My Header</h1>
 
 <p>My paragraph.</p>
-<p><%= users %></p>
+<p><%= user %></p>
 <img src="testpic.png" width="104" height="142"></img>
 <button onclick="document.location='./subserver'">click me</button>
 </body>
