--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,6 +6,13 @@
 <p>My paragraph.</p>
 <p><%= user %></p>
 <img src="testpic.png" width="104" height="142"></img>
-<button onclick="document.location='./subserver'">click me</button>
+<input type="text"><var id = "uname" name="username"><%=usname%></var></input>
+<script>
+ function input() {
+	var input = document.getElementById("uname").value;
+ }
+</script>
+
+<button onclick="document.location='./subserver'" value="<%=usname%>" action='/submit-data' method='POST' name="usname">click me</button>
 </body>
 </html>
