--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,12 @@
 <p><%= user %></p>
 <img src="testpic.png" width="104" height="142"></img>
 <input type="text"><var id = "uname" name="username"><%=usname%></var></input>
+<form action="/submit" method="POST">
+<label for="username">Username:</label>
+<input type="text" id="username" name="username" />
+<button type="submit">Submit</button>
+</form>
 
-<button onclick="document.location='./subserver'" value="<%=usname%>" action='/submit-data' method='POST' name="usname">click me</button>
+<button onclick="document.location='./subserver'">click me</button>
 </body>
 </html>
