--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>My Header2</h1>
+<%
+let user = null;
+%>
 <p>Welcome <%=user%></p>
 <img src="testpic.png" width="104" height="142"></img>
 <button onclick="document.location='../?year=2017&month=July'">click me</button>
