--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -5,6 +5,9 @@
 <%
 let user = null;
 %>
+<script>
+location.reload(true);
+</script>
 <p>Welcome <%=user%></p>
 <img src="testpic.png" width="104" height="142"></img>
 <button onclick="document.location='../?year=2017&month=July'">click me</button>
