--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,11 @@
 <form action="/submit" method="POST">
 <label for="username">Username:</label>
 <input type="text" id="username" name="username" />
-<button type="submit" onclick="document.location='./subserver'">Submit</button>
+<br />
+<label for="password">Password:</label>
+<input type="password" id="password" name="password" />
+<br />
+<button type="submit" >Submit</button>
 </form>
 </body>
 </html>
