--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,7 +5,7 @@
 
 <p>My paragraph.</p>
 <img src="testpic.png" width="104" height="142"></img>
-<p color='red'> <%=er%> </p>
+<p style="color:red;"> <%=er%> </p>
 <form action="/submit" method="POST">
 <label for="username">Username:</label>
 <input type="text" id="username" name="username" />
