--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>My Header2</h1>
+<h1>This site does nothing</h1>
 <p>Welcome <%=user%></p>
-<img src="testpic.png" width="104" height="142"></img>
+<img src="Fruity_png_2.png" width="104" height="142"></img>
 <button onclick="document.location='../?year=2017&month=July'">click me</button>
+<button>this button does nothing</button>
 </body>
 </html>
