--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,7 +4,7 @@
 <h1>My Header</h1>
 
 <p>My paragraph.</p>
-<img src="testpic.png" width="104" height="142"></img>
+<img src="Fruity_png_2.png" width="104" height="142"></img>
 <p style="color:red;"> <%=er%> </p>
 <form action="/submit" method="POST">
 <label for="username">Username:</label>
