--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>My Header</h1>
+<h1>useless website</h1>
 
-<p>My paragraph.</p>
+<p>why are you here?</p>
 <img src="Fruity_png_2.png" width="104" height="142"></img>
 <p style="color:red;"> <%=er%> </p>
 <form action="/submit" method="POST">
