--- a/views/pages/signup.ejs
+++ b/views/pages/signup.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>useless website</h1>
+<h1>useless website signup</h1>
 
 <p>why are you here?</p>
 <img src="Fruity_png_2.png" width="104" height="142"></img>
 <p style="color:red;"> <%=er%> </p>
-<form action="/submit" method="POST">
+<form action="/sud" method="POST">
 <label for="username">Username:</label>
 <input type="text" id="username" name="username" />
 <br />
@@ -15,6 +15,5 @@
 <br />
 <button type="submit" >Submit</button>
 </form>
-<button onclick="document.location='/signup'" >signup</button>
 </body>
 </html>
